--- a/src/editors/xrSdkControls/xrSdkControls.csproj
+++ b/src/editors/xrSdkControls/xrSdkControls.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Controls\IntegerSlider\IntegerSlider.Designer.cs">
       <DependentUpon>IntegerSlider.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\NumericSpinner\NumericSpinner.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\NumericSpinner\NumericSpinner.designer.cs">
+      <DependentUpon>NumericSpinner.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\PropertyGrid.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\IntegerSlider\IntegerSlider.resx">
       <DependentUpon>IntegerSlider.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NumericSpinner\NumericSpinner.resx">
+      <DependentUpon>NumericSpinner.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
