--- a/src/utils/xrSE_Factory/xrSE_Factory.vcxproj
+++ b/src/utils/xrSE_Factory/xrSE_Factory.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="..\..\Common\object_type_traits.h" />
     <ClInclude Include="..\..\Include\xrRender\DrawUtils.h" />
     <ClInclude Include="..\..\xrCore\fastdelegate.h" />
+    <ClInclude Include="..\..\xrEngine\WaveForm.h" />
     <ClInclude Include="..\..\xrServerEntities\ai_sounds.h" />
     <ClInclude Include="..\..\xrServerEntities\alife_human_brain.h" />
     <ClInclude Include="..\..\xrServerEntities\alife_human_brain_inline.h" />
@@ -142,7 +143,6 @@
     <ClInclude Include="..\..\xrServerEntities\smart_cast_impl1.h" />
     <ClInclude Include="..\..\xrServerEntities\smart_cast_impl2.h" />
     <ClInclude Include="..\..\xrServerEntities\specific_character.h" />
-    <ClInclude Include="..\..\xrServerEntities\WaveForm.h" />
     <ClInclude Include="..\..\xrServerEntities\xml_str_id_loader.h" />
     <ClInclude Include="..\..\xrServerEntities\xrEProps.h" />
     <ClInclude Include="..\..\xrServerEntities\xrMessages.h" />
